[gd_scene format=3 uid="uid://drsuy7o5ivfri"]

[ext_resource type="Script" uid="uid://ckwu13mmody25" path="res://scripts/visuals/weapon_sprite.gd" id="1_ws"]

[sub_resource type="Animation" id="Animation_idle"]
resource_name = "idle"
length = 0.6
loop_mode = 1

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1"]
_data = {
&"idle": SubResource("Animation_idle")
}

[node name="CrayolaWand" type="Node2D" unique_id=684799972]
script = ExtResource("1_ws")
idle_animation = &"idle"
hand_rotation_offset_degrees = 180.0

[node name="MuzzlePoint" type="Marker2D" parent="." unique_id=1928127544]
position = Vector2(0, -13)

[node name="EffectAnchor" type="Marker2D" parent="." unique_id=725991383]
position = Vector2(0, -11)

[node name="TrailOrigin" type="Marker2D" parent="." unique_id=1605625421]
position = Vector2(0, -12)

[node name="ImpactPoint" type="Marker2D" parent="." unique_id=1995239635]
position = Vector2(0, -3)

[node name="WandSilhouette" type="Line2D" parent="." unique_id=2119914507]
z_index = -1
position = Vector2(0, -2)
scale = Vector2(0.33333334, 0.4117647)
points = PackedVector2Array(0, 0, 0, -28)
width = 3.0
default_color = Color(1, 0.9, 0.35, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=949129682]
libraries/ = SubResource("AnimationLibrary_1")
